--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-session": "^1.19.0",
     "fluent-ffmpeg": "^2.1.3",
     "got": "^14.6.6",
+    "https-proxy-agent": "^7.0.2",
     "multer": "^2.0.2",
     "play-dl": "^1.9.7",
     "twitch-m3u8": "^1.1.5",
